# connectomics-mcp

./: .gitignore  CHANGELOG.md  OUTPUT_CONTRACTS.md  README.md  SCHEMA_REFERENCE.md  TOOL_REGISTRY.md  pyproject.toml
src/connectomics_mcp/: __init__.py  exceptions.py  registry.py  server.py  taxonomy_cache.py
src/connectomics_mcp/artifacts/: __init__.py  writer.py
src/connectomics_mcp/backends/: base.py  cave_backend.py  neuprint_backend.py
src/connectomics_mcp/neuroglancer/: url_builder.py
src/connectomics_mcp/output_contracts/: formatters.py  schemas.py
src/connectomics_mcp/tools/: cave_specific.py  neuprint_specific.py  universal.py
tests/: conftest.py  test_artifacts.py  test_bulk_connectivity.py  test_bulk_microns.py  test_cave_specific.py  test_flywire_annotations.py  test_integration.py  test_microns_tables.py  test_neuprint_specific.py  test_neuroglancer.py  test_schemas.py  test_search_cell_types.py  test_universal.py
tests/integration/: conftest.py  test_live_api.py  test_schema_audit.py
