[project]
name = "connectomics-mcp"
version = "0.1.0"
description = "MCP server for connectomic dataset access"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "caveclient>=5.0",
    "neuprint-python>=0.5",
    "cloud-volume>=8.0",
    "navis>=1.4",
    "pydantic>=2.0",
]

[project.scripts]
connectomics-mcp = "connectomics_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
