[project]
name = "connectomics-mcp"
version = "0.1.0"
description = "MCP server for connectomic dataset access"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["connectomics", "neuroscience", "MCP", "model-context-protocol", "hemibrain", "FlyWire", "MICrONS"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "mcp[cli]>=1.0",
    "caveclient>=5.0",
    "neuprint-python>=0.5",
    "cloud-volume>=8.0",
    "navis>=1.4",
    "pydantic>=2.0",
]

[project.scripts]
connectomics-mcp = "connectomics_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyarrow>=12.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
